# cpp2024

./: MathLibrary.h  main.cpp  mathTest.cpp
HW1/: readyFunctions.cpp  usingFunctions.cpp
MoshchanetskayaMaria/: mini_HW4_sem2.cpp
Sem2/BuchelnikovEgor/MiniHomework1_sem2/: MathLibrary.cpp
Sem2/BuchelnikovEgor/MiniHomework4_sem2/: MiniHomework4_sem2.sln  MiniHomework4_sem2.vcxproj  main.cpp
Sem2/MHW3/: MHW_03.cpp
Sem2/PetkoEgor/: MiniHomeWorkSEM22.cpp
TrepovMichael/HW3/: HW3.cpp
example/: GameController.cpp  GameController.h  cell.h  consta.h  model.h  new_sfmlproj.cpp  new_sfmlproj.vcxproj  new_sfmlproj.vcxproj.filters  observer.h
sem1/BuchelnikovEgor/MiniHomework3_sem2/: main.cpp
sem1/BuchelnikovEgor/minihw2_sem2/: main.cpp
sem1/KravtsovaMary/minihomework4/: minihw4.cpp
sem1/LevNemtsev/: task1a.cpp  task1b.cpp  task2.cpp
sem1/MakashovGO/BIG 1/: Source1.cpp
sem1/MikhnevVM/MiniHomeWork2/: task2_2.cpp
sem2/: Main.cpp
sem2/AlanMadreimov/MHW_03/: MHW_03.cpp
sem2/AlanMadreimov/MiniHomeWork_04/: MHW_4.cpp
sem2/ArtyomLoskutov/Minihomework_1/: MathApp.cpp  MathLib.lib  mathlib.cpp  mathlib.h
sem2/GinailoYosef/: HW3.cpp  MHW4.cpp
sem2/MHW_03/: MHW_03.cpp
sem2/MiniHW1/: HWDLL.h  dllmain.cpp
sem2/TayKorol/: README.md
sem2/TayKorol/miniHW1/LibraryCompilationExample/: CMakeLists.txt  main.cpp
sem2/TayKorol/miniHW1/LibraryCompilationExample/header_only_lib_example/: statistics.h
sem2/TayKorol/miniHW1/LibraryCompilationExample/static_lib_example/: double_statistics.cpp  double_statistics.h
sem2/VolkovaAP/: HW3.cpp
sem2/minihw1/: DLL1.h
(+614 files in other folders)
